--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ body {
 	left:40px;
 }
 
+.link_btn, .link_btnw{
+	position:absolute;
+	top:30px;
+	left:40px;
+}
+
+
 path.map.active:hover{
 	opacity:0.9;
 	cursor:pointer;
